--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -312,7 +312,7 @@ ul {
   text-align: center;
   font-size: 2rem;
   font-family: "Afacad Flux", sans-serif;
-  padding: 200px 0 40px 0;
+  padding: 0 0 40px 0;
   top: 50%;
   left: 50%;
   text-align: center;
